# stripe

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/django_examples/: settings.py  urls.py
app/templates/: item_detail.html  payment_cancelled.html  success.html
app/user_payment/: admin.py  models.py  views.py
